<resources>
    <string name="app_name">Week3AppNavigation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello Forget Password fragment</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="reset">Reset</string>
    <string name="password_reset">Password Reset</string>
    <string name="welcome">Welcome %s!</string>
    <string name="username">Username</string>
    <string name="logout">Logout</string>
</resources>